test/param/config/ambiguousConfig.good
ambiguousConfig.chpl:6: error: Ambiguous config name (PV)
